manifests/95-gitlab-runner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-runner

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-runner
  namespace: gitlab-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-runner
  template:
    metadata:
      labels:
        app: gitlab-runner
    spec:
      serviceAccountName: gitlab-runner
      containers:
        - name: gitlab-runner
          image: gitlab/gitlab-runner:latest
          volumeMounts:
            - name: config
              mountPath: /etc/gitlab-runner
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: gitlab-runner-config
