manifests/30-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: procar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: registry.pc-dev.nikichxp.xyz/procar/auth:latest
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: procar
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 8082
      targetPort: 8082
