manifests/40-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: procar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: user
          image: registry.pc-dev.nikichxp.xyz/procar/user:latest
          ports:
            - containerPort: 8084
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: procar
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 8084
      targetPort: 8084
