manifests/50-auction-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-provider-procar
  namespace: procar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction-provider-procar
  template:
    metadata:
      labels:
        app: auction-provider-procar
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: auction-provider-procar
          image: registry.pc-dev.nikichxp.xyz/procar/auction-provider-procar:latest
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: auction-provider-procar
  namespace: procar
spec:
  type: ClusterIP
  selector:
    app: auction-provider-procar
  ports:
    - port: 8083
      targetPort: 8083
