manifests/55-admin-jetpack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-jetpack
  namespace: procar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-jetpack
  template:
    metadata:
      labels:
        app: admin-jetpack
    spec:
      imagePullSecrets:
        - name: registry-pull-secret
      containers:
        - name: admin-jetpack
          image: registry.pc-dev.nikichxp.xyz/procar/admin-jetpack:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: admin-jetpack
  namespace: procar
spec:
  type: ClusterIP
  selector:
    app: admin-jetpack
  ports:
    - port: 80
      targetPort: 80
