manifests/90-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: procar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: api.pc-dev.nikichxp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
  tls:
    - hosts:
        - api.pc-dev.nikichxp.xyz
      secretName: gateway-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-jetpack-ingress
  namespace: procar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: admin.pc-dev.nikichxp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-jetpack
                port:
                  number: 80
  tls:
    - hosts:
        - admin.pc-dev.nikichxp.xyz
      secretName: admin-jetpack-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: registry.pc-dev.nikichxp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
  tls:
    - hosts:
        - registry.pc-dev.nikichxp.xyz
      secretName: registry-tls
