manifests/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: procar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - admin.pc-dev.nikichxp.xyz
        - admin.test.procar-auction.com
      secretName: admin-tls
  rules:
    - host: admin.pc-dev.nikichxp.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-jetpack
                port:
                  number: 8080
    - host: admin.test.procar-auction.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-jetpack
                port:
                  number: 8080
